[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/main/ui/menu/theme/h1-font-outline.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=2]
[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=3]
[ext_resource path="res://src/main/ui/menu/theme/h3.theme" type="Theme" id=4]
[ext_resource path="res://src/main/puzzle/puzzle-messages.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/blogger-sans-medium-18.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/main/ui/UiCancelShortcut.tres" type="ShortCut" id=7]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=8]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=9]

[node name="PuzzleMessages" type="Control"]
margin_left = 364.0
margin_top = 28.0
margin_right = 688.0
margin_bottom = 572.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailMessageLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -248.0
margin_right = 118.0
margin_bottom = -70.0
custom_styles/normal = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 6 )
text = "Controls

Arrows: Move
Up/Shift: Hard drop
Down: Soft drop
Z, X: Rotate"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -40.0
margin_right = 144.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="Buttons"]
margin_left = 72.0
margin_right = 252.0
margin_bottom = 60.0
rect_min_size = Vector2( 180, 60 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 4 )
shortcut_in_tooltip = false
text = "Start"

[node name="Settings" type="Button" parent="Buttons"]
margin_left = 104.0
margin_top = 70.0
margin_right = 220.0
margin_bottom = 98.0
rect_min_size = Vector2( 116, 28 )
size_flags_horizontal = 4
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = ExtResource( 8 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortcutHelper" parent="Buttons/Settings" instance=ExtResource( 9 )]
action = "ui_cancel"
overridden_action = "ui_menu"

[node name="Back" type="Button" parent="Buttons"]
margin_left = 104.0
margin_top = 108.0
margin_right = 220.0
margin_bottom = 136.0
rect_min_size = Vector2( 116, 28 )
size_flags_horizontal = 4
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = ExtResource( 7 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Back" to="." method="_on_Back_pressed"]
